<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="110dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView17"
        android:layout_margin="10dp"
        android:background="@drawable/banner" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/item_image"
        android:layout_alignTop="@+id/item_image"
        android:layout_toEndOf="@+id/item_image"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView90"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/driverstyleexample" />

        <TextView
            android:id="@+id/textView86"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/findcardriver_distance" />

        <TextView
            android:id="@+id/textView91"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:text="@string/rent" />

        <TextView
            android:id="@+id/textView92"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView91"
            android:layout_toEndOf="@+id/textView91"
            android:text="@string/rentexample" />

    </RelativeLayout>


</RelativeLayout>