<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_touxiang" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView18"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/imageView18"
        android:text="@string/findcardriver_age" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView37"
        android:layout_toEndOf="@+id/textView37"
        android:text="@string/findcardriver_ageexample" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView18"
        android:layout_alignStart="@+id/textView37"
        android:layout_marginBottom="5dp"
        android:text="@string/sex_man" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="33dp"
        android:text="@string/findcardriver_distance"
        android:layout_alignTop="@+id/textView38"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_youche"
        android:layout_alignBottom="@+id/textView39"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="19dp" />
</RelativeLayout>