<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lx.car.car.FindCarActivity">

    <include
        android:id="@+id/include3"
        layout="@layout/layout_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/include3"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rentV"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/rentV"
            android:textColor="@color/yellow" />

        <TextView
            android:id="@+id/allstyleV"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/allstyleV" />

        <TextView
            android:id="@+id/brandV"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/brandV" />

        <TextView
            android:id="@+id/defaultV"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/defaultV" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView85"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout7"
        android:background="@color/gray" />

    <android.support.v4.view.ViewPager
        android:id="@+id/findcar_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView85">

    </android.support.v4.view.ViewPager>

</RelativeLayout>
