<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context="com.lx.car.car.CardriverDetailActivity">

    <include
        android:id="@+id/relativeLayout"
        layout="@layout/layout_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/relativeLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/relativeLayout6"
        android:layout_below="@+id/relativeLayout">

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_touxiang" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imageView18"
            android:layout_toEndOf="@+id/imageView18"
            android:text="@string/cardriver_nameexample" />


        <TextView
            android:id="@+id/textView39"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView37"
            android:layout_below="@+id/textView37"
            android:layout_marginTop="16dp"
            android:text="@string/sex_man" />

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/textView39"
            android:layout_marginEnd="17dp"
            android:background="@drawable/ic_youche" />

        <TextView
            android:id="@+id/textView41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView19"
            android:layout_toEndOf="@+id/imageView18"
            android:text="@string/findcardriver_age" />

        <TextView
            android:id="@+id/textView42"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView41"
            android:layout_toEndOf="@+id/textView41"
            android:text="@string/findcardriver_ageexample" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView46"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/relativeLayout5"
        android:background="@color/gray" />

    <RelativeLayout
        android:id="@+id/relativeLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView49"
        android:layout_below="@+id/textView46">

        <TextView
            android:id="@+id/textView43"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/cardetail" />

        <TextView
            android:id="@+id/textView44"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView43"
            android:layout_below="@+id/textView43"
            android:layout_marginTop="25dp"
            android:text="@string/driverstyleexample" />

        <TextView
            android:id="@+id/textView45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView44"
            android:layout_below="@+id/textView44"
            android:layout_marginTop="5dp"
            android:text="已用2年" />

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/textView45"
            android:layout_marginEnd="15dp"
            android:background="@drawable/ic_xiaosanjiao_me" />

        <TextView
            android:id="@+id/textView50"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@color/gray" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView48"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/projectdetail_describe" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView51"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/projectdetail_describeexample" />

    <RelativeLayout
        android:id="@+id/projectdetail_bottemrl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/projectdetail_contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:text="@string/projectdetail_contacts" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_dianhua" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView48"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout6"
        android:layout_marginTop="10dp"
        android:background="@color/gray" />

    <TextView
        android:id="@+id/textView51"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView47"
        android:layout_marginTop="10dp"
        android:background="@color/gray" />

    <TextView
        android:id="@+id/textView52"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@+id/projectdetail_bottemrl"
        android:layout_alignParentStart="true"
        android:background="@color/gray_me" />
</RelativeLayout>
